@@ -961,6 +961,8 @@ static void hook_insert_filter(request_rec *r) {
     }
 }
 
+/* NOTE: This is causing and endless loop when blocking in phase:3 */
+#if 0
 /**
  * Invoked whenever Apache starts processing an error. A chance
  * to insert ourselves into the output filter chain.
@@ -1002,6 +1004,7 @@ static void hook_insert_error_filter(request_rec *r) {
         }
     }
 }
+#endif
 
 #if (!defined(NO_MODSEC_API))
 /**
@@ -1102,7 +1105,9 @@ static void register_hooks(apr_pool_t *mp) {
 
     /* Filter hooks */
     ap_hook_insert_filter(hook_insert_filter, NULL, NULL, APR_HOOK_FIRST);
+#if 0
     ap_hook_insert_error_filter(hook_insert_error_filter, NULL, NULL, APR_HOOK_FIRST);
+#endif
 
     ap_register_input_filter("MODSECURITY_IN", input_filter,
         NULL, AP_FTYPE_CONTENT_SET);
