@@ -1,6 +1,8 @@
 09 May 2008 - 2.5.5-dev1
 ------------------------
 
+* Fixed blocking in phase 3.
+
 * Force modules "mod_rpaf-2.0.c" and "mod_custom_header.c" to run before
   ModSecurity so that the correct IP is used.
 
